--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Date Converter",
   "version": "1.0",
   "description": "Convert selected date and show popup and clip",
-  "permissions": ["contextMenus", "scripting", "activeTab", "notifications","clipboardWrite"],
+  "permissions": ["contextMenus", "scripting", "activeTab", "notifications", "clipboardRead", "clipboardWrite"],
   "background": {
     "service_worker": "background.js"
   },
